@@ -1,3 +1,7 @@
+2003-06-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* libc/stdlib/strtoul.c: fix broken unsigned handling.
+
 2003-06-13  Eric B. Weddington  <eric@ecentral.com>
 
 	* include/avr/iom169.h: Add missing EECR bit defines.
